# explore-haskell

./: README.md  test.cabal
app/: Main.hs
src/: Test.hs
src/DependentTypes/: Better.hs  Betterer.hs  README.md  Simple.hs
