cabal-version:      2.4
name:               test
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Norbert Dzikowski
maintainer:         norbert@perun.network

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared
    build-depends:  base ^>= 4.14.3.0
    ghc-options:    -Weverything
                    -Werror
                    -Wno-missing-import-lists
                    -Wno-missing-deriving-strategies
                    -Wno-safe
                    -Wno-unsafe
                    -Wno-missing-safe-haskell-mode
                    -Wno-missing-export-lists
                    -Wno-implicit-prelude
                    -Wno-redundant-constraints
                    -Wno-missing-local-signatures

library
    import:           shared
    hs-source-dirs:   src
    build-depends:    ghc-prim
    exposed-modules:  Test
                    , DependentTypes.Simple
                    , DependentTypes.Better
                    , DependentTypes.Betterer

executable test-exe
    import:           shared
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    test
    hs-source-dirs:   app
    default-language: Haskell2010
